--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.22'
+        go-version: '1.23'
 
     - name: Cache Go modules
       uses: actions/cache@v4
@@ -54,7 +54,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.22'
+        go-version: '1.23'
 
     - name: golangci-lint
       uses: golangci/golangci-lint-action@v4
@@ -82,7 +82,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.22'
+        go-version: '1.23'
 
     - name: Build binary
       env:
@@ -91,13 +91,13 @@ jobs:
       run: |
         CGO_ENABLED=0 go build \
           -ldflags="-s -w -X main.VERSION=${{ github.sha }}" \
-          -o dist/mcp-serve-${{ matrix.goos }}-${{ matrix.goarch }}${{ matrix.goos == 'windows' && '.exe' || '' }} \
+          -o dist/agentmcp-${{ matrix.goos }}-${{ matrix.goarch }}${{ matrix.goos == 'windows' && '.exe' || '' }} \
           .
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: mcp-serve-${{ matrix.goos }}-${{ matrix.goarch }}
+        name: agentmcp-${{ matrix.goos }}-${{ matrix.goarch }}
         path: dist/*
 
   docker:
@@ -117,6 +117,6 @@ jobs:
       with:
         context: .
         push: false
-        tags: mcp-serve:test
+        tags: agentmcp:test
         cache-from: type=gha
         cache-to: type=gha,mode=max
