Add Skills and Commands support with embedded migrations
- Add Skill and Command models with full CRUD operations
- Implement embedded migration system (migrations/embed.go, internal/migrations/runner.go)
- Add migrations 004 (skills/commands tables) and 005 (seed data)
- Enable AUTO_MIGRATE in Dockerfile.v2 and docker-compose.v2.yml
- Update deploy.sh to handle existing databases with schema_migrations seeding
- Extend populate_embeddings.sh to include skills and commands
- Add Pool() method to database for migration runner access

--- a/docker-compose.v2.yml
+++ b/docker-compose.v2.yml
@@ -69,6 +69,7 @@ services:
       ANTHROPIC_API_KEY: ${ANTHROPIC_API_KEY}
       MCP_TRANSPORT: sse
       MCP_PORT: 18080
+      AUTO_MIGRATE: "true"
     ports:
       - "18080:18080"
     stdin_open: true
