--- a/Dockerfile.v2
+++ b/Dockerfile.v2
@@ -45,6 +45,9 @@ COPY --chown=mcp:mcp migrations/ /app/migrations/
 
 USER mcp
 
+# Auto-migrate on startup
+ENV AUTO_MIGRATE=true
+
 EXPOSE 18080
 
 HEALTHCHECK --interval=30s --timeout=3s --start-period=10s --retries=3 \
